[package]
name = "rustscanr"
version = "0.1.0"
edition = "2024"
authors = ["Barend van der Walt <38956787+bvdwalt@users.noreply.github.com>"]
description = "🦀 rustscanr: A simple async TCP port scanner"
license = "MIT"
readme = "README.md"
repository = "https://github.com/bvdwalt/rustscanr

[dependencies]
tokio = { version = "1.37", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
